--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   </header>
 
   <section class="hero" data-aos="zoom-in">
-    <img src="eafc25.jpg" alt="FC25 Logo" class="fc25-logo" />
+    <img src="eafc25.jpg" alt="FC25 Logo" width="1000" />
     <h2>Selamat Datang!</h2>
     <p>Saya Muhammad Farih Ahbab, YouTuber Gamer Spesialis FC25 Career Mode</p>
     <a href="#channel" class="button">Lihat Channel</a>
