--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     .hero img.fc25-logo {
       width: 100%;
-      max-width: 220px;
+      max-width: 600px;
       height: auto;
       margin-bottom: 30px;
       border-radius: 8px;
@@ -170,7 +170,7 @@
   </header>
 
   <section class="hero" data-aos="zoom-in">
-    <img src="eafc25.jpg" alt="FC25 Logo" width="1000" />
+    <img src="eafc25.jpg" alt="FC25 Logo" class="fc25-logo" />
     <h2>Selamat Datang!</h2>
     <p>Saya Muhammad Farih Ahbab, YouTuber Gamer Spesialis FC25 Career Mode</p>
     <a href="#channel" class="button">Lihat Channel</a>
