--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       color: #f0f0f0;
       line-height: 1.6;
       scroll-behavior: smooth;
+      padding-top: 80px; /* untuk memberi ruang pada header tetap */
     }
 
     header {
@@ -29,7 +30,8 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      position: sticky;
+      position: fixed;
+      width: 100%;
       top: 0;
       z-index: 1000;
     }
